<resources>
    <string name="app_name">Mari Sekolah !</string>
    <string name="berita">Berita</string>
    <string name="cari_sekolah">Cari Sekolah</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="guest_berita">Berita Terbaru</string>
    <string name="guest_sekolah">Sekolah</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="nama_sekolah">Nama Sekolah</string>
    <string name="waktu_berita">Waktu Berita</string>
    <string name="nama_staf">Hans Anderson</string>
    <string name="isi_berita">SMA Santo Yosef adalah sekolah Ricko</string>
    <string name="isi_sekolah">SMA Santo Yosef merupakan sekolah yang ....</string>
    <string name="buka">Buka</string>
    <string name="tutup">Tutup</string>
    <string name="sekolah">Sekolah</string>
    <string name="keluar">Keluar</string>
    <string name="login">Login Staff/Admin</string>
    <string name="guest">Guest</string>
    <string name="input_berita">Form Input Berita</string>
    <string name="ubah_profil">Edit Profil Sekolah</string>
    <string name="tambah_staff">Tambah Staff</string>
    <string name="submit">Submit</string>
    <string name="tambah_sekolah">Tambah Sekolah</string>
    <string name="in_berita">Input Berita</string>
    <string name="edt_profil">Edit Profil</string>
    <string name="isi_tentangkami">Aplikasi Informasi Sekolah  merupakan sebuah aplikasi android
        yang simple namun sangat bermanfaat bagi siswa/i dalam mencari sekolah  dan info terupdate.</string>
    <string name="tambah_admin">Tambah Admin</string>
    <string name="daftar_staff">Daftar Staff</string>
    <string-array name="level">
        <item>Staff</item>
        <item>Admin</item>
    </string-array>
</resources>