<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/admin_sekolah"
            android:icon="@drawable/ic_school"
            android:title="@string/tambah_sekolah"/>
        <item
            android:id="@+id/admin_list_sekolah"
            android:icon="@drawable/ic_about"
            android:title="List Sekolah"/>
        <item
            android:id="@+id/admin_staff"
            android:icon="@drawable/ic_about"
            android:title="@string/tambah_staff"/>
        <item
            android:id="@+id/admin_list_staff"
            android:icon="@drawable/ic_list_staff"
            android:title="List Staff"/>
        <item
            android:id="@+id/admin_admin"
            android:icon="@drawable/ic_tambah_admin"
            android:title="@string/tambah_admin"/>
        <item
            android:id="@+id/admin_list_admin"
            android:icon="@drawable/ic_about"
            android:title="List Admin"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/keluar"/>
    </group>

</menu>