<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="2dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_berita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:foreground="?selectableItemBackground">

        <ImageView
            android:id="@+id/img_berita"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt_judul_berita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/judul_berita"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_berita"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt_waktu_berita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/waktu_berita"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/img_berita"
            app:layout_constraintTop_toBottomOf="@+id/txt_judul_berita"/>

        <TextView
            android:id="@+id/txt_isi_berita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/isi_berita"
            app:layout_constraintStart_toEndOf="@+id/img_berita"
            app:layout_constraintTop_toBottomOf="@+id/txt_waktu_berita"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>